# graphql_github

./: .gitignore  Cargo.toml  README.md  demon.ps1  get_answered_discussions.graphql  get_closed_issues.graphql  get_pr_commits.graphql  get_repository_discussions.graphql  output.json  repolist.txt  test copy.graphql  test.graphql
config/: log4rs.yaml
src/: config.rs  graphql_client_ext.rs  log.rs  main.rs  query.rs  util.rs
