[package]
name = "graphql_github"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde = { version = "1.0.193", features = ["std", "derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.29"
