[package]
name = "graphql_github"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = { version = "0.13.0", features = [
    "graphql_query_derive",
    "reqwest",
    "reqwest-blocking",
] }
log = "0.4.20"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde = { version = "1.0.193", features = ["std", "derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.29"
